crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pause-zero.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "pause-zero",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "pause starting with 0.",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 4818,
            "start_ms": 0
          },
          "content": [
            {
              "duration": {
                "seconds": "0.4",
                "type": "timed"
              },
              "type": "pause"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 5330,
            "start_ms": 4818
          },
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "hey",
                        "type": "text"
                      }
                    ],
                    "raw_text": "hey",
                    "span": {
                      "end": 246,
                      "start": 243
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "you",
                        "type": "text"
                      }
                    ],
                    "raw_text": "you",
                    "span": {
                      "end": 250,
                      "start": 247
                    },
                    "type": "word"
                  },
                  {
                    "duration": {
                      "type": "short"
                    },
                    "type": "pause"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "hey you",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
