crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pauses-timed.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Timed pauses with numeric durations",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: timed pauses (N.), (N.N), (M:SS.N) alongside named pauses",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "duration": {
                "seconds": "3.",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "cookie",
              "content": [
                {
                  "content": "cookie",
                  "type": "text"
                }
              ],
              "raw_text": "cookie",
              "type": "word"
            },
            {
              "duration": {
                "type": "medium"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "please",
              "content": [
                {
                  "content": "please",
                  "type": "text"
                }
              ],
              "raw_text": "please",
              "type": "word"
            },
            {
              "duration": {
                "type": "long"
              },
              "type": "pause"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "okay",
              "content": [
                {
                  "content": "okay",
                  "type": "text"
                }
              ],
              "raw_text": "okay",
              "type": "word"
            },
            {
              "duration": {
                "seconds": "0.5",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "let",
              "content": [
                {
                  "content": "let",
                  "type": "text"
                }
              ],
              "raw_text": "let",
              "type": "word"
            },
            {
              "cleaned_text": "me",
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            },
            {
              "cleaned_text": "one",
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "and",
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "type": "word"
            },
            {
              "duration": {
                "seconds": "1:30.5",
                "type": "timed"
              },
              "type": "pause"
            },
            {
              "cleaned_text": "then",
              "content": [
                {
                  "content": "then",
                  "type": "text"
                }
              ],
              "raw_text": "then",
              "type": "word"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "eat",
              "content": [
                {
                  "content": "eat",
                  "type": "text"
                }
              ],
              "raw_text": "eat",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
